src/lexer/tests/snapshots/ops.snap
---
source: src/lexer/mod.rs
assertion_line: 509
expression: "(input, Lexer::new(input).scan())"
---
- (x + y) * 4 / 4
- Ok:
    - tt: OpenParen
      line: 1
      column: 1
    - tt:
        Ident: x
      line: 1
      column: 2
    - tt:
        Op: Add
      line: 1
      column: 4
    - tt:
        Ident: y
      line: 1
      column: 6
    - tt: CloseParen
      line: 1
      column: 7
    - tt:
        Op: Mul
      line: 1
      column: 9
    - tt:
        Num: "4"
      line: 1
      column: 11
    - tt:
        Op: Div
      line: 1
      column: 13
    - tt:
        Num: "4"
      line: 1
      column: 15
    - tt:
        Semicolon: true
      line: 1
      column: 16

