src/lexer/tests/snapshots/semi-2.snap
---
source: src/lexer/mod.rs
assertion_line: 528
expression: "(input, Lexer::new(input).scan())"
---
- "1"
- Ok:
    - tt:
        Num: "1"
      line: 1
      column: 1
    - tt:
        Semicolon: true
      line: 1
      column: 2

