src/lexer/tests/snapshots/semi-3.snap
---
source: src/lexer/mod.rs
assertion_line: 528
expression: "(input, Lexer::new(input).scan())"
---
- a()
- Ok:
    - tt:
        Ident: a
      line: 1
      column: 1
    - tt: OpenParen
      line: 1
      column: 2
    - tt: CloseParen
      line: 1
      column: 3
    - tt:
        Semicolon: true
      line: 1
      column: 4

