src/lexer/tests/snapshots/semi-5.snap
---
source: src/lexer/mod.rs
assertion_line: 528
expression: "(input, Lexer::new(input).scan())"
---
- "let a: int"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: a
      line: 1
      column: 5
    - tt: Colon
      line: 1
      column: 6
    - tt:
        VarType: Int32
      line: 1
      column: 8
    - tt:
        Semicolon: true
      line: 1
      column: 9

