src/lexer/tests/snapshots/semi-6.snap
---
source: src/lexer/mod.rs
assertion_line: 528
expression: "(input, Lexer::new(input).scan())"
---
- let
- Ok:
    - tt: Let
      line: 1
      column: 1

