src/lexer/tests/snapshots/semi-7.snap
---
source: src/lexer/mod.rs
assertion_line: 528
expression: "(input, Lexer::new(input).scan())"
---
- fn
- Ok:
    - tt: Fn
      line: 1
      column: 1

