src/lexer/tests/snapshots/semi.snap
---
source: src/lexer/mod.rs
assertion_line: 528
expression: "(input, Lexer::new(input).scan())"
---
- a
- Ok:
    - tt:
        Ident: a
      line: 1
      column: 1
    - tt:
        Semicolon: true
      line: 1
      column: 2

