src/lexer/tests/snapshots/trailing_comment.snap
---
source: src/lexer/mod.rs
assertion_line: 539
expression: "(input, Lexer::new(input).scan())"
---
- "let foo = 13\n// line2"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: foo
      line: 1
      column: 5
    - tt:
        Op: Assign
      line: 1
      column: 9
    - tt:
        Num: "13"
      line: 1
      column: 11
    - tt:
        Semicolon: true
      line: 1
      column: 13

