src/lexer/tests/snapshots/unknown_char.snap
---
source: src/lexer/mod.rs
assertion_line: 547
expression: "(input, Lexer::new(input).scan())"
---
- "let foo = `1`"
- Err:
    message: "Unknown character: `"
    line: 1
    column: 11

